clang/test/BSC/Negative/InitAnalysis/field_through_pointer_truncation.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s
// Regression for F55.

_Safe void consume(int v);
struct Inner { int g; };
struct Outer { struct Inner *_Borrow f; struct Inner *_Borrow g; };

_Safe void test(void) {
    struct Outer s;
    s.f->g = 42; // expected-error {{use of uninitialized value: `s.f`}}
    consume(s.f->g); // expected-error {{use of uninitialized value: `s.f`}}
    consume(s.g->g); // expected-error {{use of uninitialized value: `s.g`}}
}
